recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:9: error: not enough arguments for method polygonFractal: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters length, shrink.
				polygonFractal(levels-1,length*shrink)
                                              ^