recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
if (levels == 0) {
				droite(360/sides)}

else{
	for (k<-1 to sides)	{	
				avance(length)
				polygonFractal(levels-1,length*shrink)
}}
	
}
